Fixed the gray gap between themeAccordion and innerPane(ControlPane)

--- a/src/memo/view/styles/editThemeStyle.css
+++ b/src/memo/view/styles/editThemeStyle.css
@@ -30,4 +30,5 @@ and open the template in the editor.
 
 .rootPane{
     -fx-background-color: #FFFFFF;
+    -fx-fit-to-width: true;
 }
